fixed bug with collapsing header, when image can't be loaded

--- a/master/header.css
+++ b/master/header.css
@@ -25,11 +25,14 @@
     background-image: url("/images/header-background.jpg");
     background-size: cover;
     background-position: center;
+    padding: 32px;
 }
 
 .logo {
-    margin: 32px;
+    /*margin: 32px;*/
     margin-left: 0;
+    height: 114px;
+    display: block;
 }
 
 
